[ash-md] Corrects initial positioning of the overview headers

This regression was introduced when order of initialization was changed
in https://codereview.chromium.org/2336673002/ . This CL restores the
order.

BUG=648520

Review-Url: https://codereview.chromium.org/2358833003
Cr-Commit-Position: refs/heads/master@{#420346}

Former-commit-id: a241953aa9d0ecd5375771e634f8638e004a9961